<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment"
    android:layout_marginBottom="?attr/actionBarSize">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvMonday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textview_monday" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                app:cardBackgroundColor="@color/dark_green"
                app:cardCornerRadius="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvMondayWorkoutName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/no_workout_planned_message"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/tvMondayWorkoutDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textAlignment="textEnd"
                        android:textColor="@color/white" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvTuesday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textview_tuesday" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:padding="5dp"
                app:cardBackgroundColor="@color/dark_green"
                app:cardCornerRadius="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvTuesdayWorkoutName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/no_workout_planned_message"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/tvTuesdayWorkoutDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textAlignment="textEnd"
                        android:textColor="@color/white" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvWednesday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textview_wednesday" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:padding="5dp"
                app:cardBackgroundColor="@color/dark_green"
                app:cardCornerRadius="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvWednesdayWorkoutName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/no_workout_planned_message"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/tvWednesdayWorkoutDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textAlignment="textEnd"
                        android:textColor="@color/white" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvThursday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textview_thursday" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:padding="5dp"
                app:cardBackgroundColor="@color/dark_green"
                app:cardCornerRadius="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvThursdayWorkoutName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/no_workout_planned_message"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/tvThursdayWorkoutDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textAlignment="textEnd"
                        android:textColor="@color/white" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvFriday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textview_friday" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:padding="5dp"
                app:cardBackgroundColor="@color/dark_green"
                app:cardCornerRadius="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvFridayWorkoutName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/no_workout_planned_message"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/tvFridayWorkoutDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textAlignment="textEnd"
                        android:textColor="@color/white" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvSaturday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textview_saturday" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:padding="5dp"
                app:cardBackgroundColor="@color/dark_green"
                app:cardCornerRadius="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvSaturdayWorkoutName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/no_workout_planned_message"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/tvSaturdayWorkoutDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textAlignment="textEnd"
                        android:textColor="@color/white" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvSunday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textview_sunday" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:padding="5dp"
                app:cardBackgroundColor="@color/dark_green"
                app:cardCornerRadius="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvSundayWorkoutName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/no_workout_planned_message"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/tvSundayWorkoutDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textAlignment="textEnd"
                        android:textColor="@color/white" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnAddWorkout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/dark_green"
        android:clickable="true"
        android:contentDescription="@string/button_add_workout_discription"
        android:src="@android:drawable/ic_input_add"
        android:tint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>